infra/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: hello
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        tier: backend
        track: stable
    spec:
      containers:
        - name: backend
          # image: localhost:5000/backend
          image: 833812018788.dkr.ecr.ap-northeast-1.amazonaws.com/backend
          ports:
          - protocol: TCP
            containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: hello
    tier: backend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 3000
