infra/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: hello
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        tier: frontend
        track: stable
    spec:
      containers:
      - name: nginx
        # image: localhost:5000/nextjs
        image: 833812018788.dkr.ecr.ap-northeast-1.amazonaws.com/nextjs
        ports:
          - protocol: TCP
            containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: hello
    tier: frontend
spec:
  type: NodePort
  # ports:
  # - port: 80
  selector:
    app: hello
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    # targetPort: 80
    targetPort: 4000
