infra/k8s/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  # annotations:
  #   kubernetes.io/ingress.class: ingress-nginx
  #   # kubernetes.io/ingress.class: alb
  #   alb.ingress.kubernetes.io/scheme: internet-facing
  #   # alb.ingress.kubernetes.io/target-type: ip

  #   app.kubernetes.io/name: ingress-nginx
  #   app.kubernetes.io/instance: ingress-nginx
  #   app.kubernetes.io/component: controller
  labels:
    app: hello
spec:
  rules:

    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
                  
    - http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

    - http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
