infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: hello
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
  
    - http:
        paths:
          - path: /_next/*/*
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    - http:
        paths:
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    - http:
        paths:
          - path: /posts/*
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    - http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

    - http:
        paths:
          - path: /v1/*
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress
# spec:
#   rules:
#   - host: localhost
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: frontend-service
#             port:
#               number: 80

  # - host: localhost
  #   http:
  #     paths:
  #     - path: /api
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: backend-service
  #           port:
  #             number: 3000
